# LLM-tenant

./: .env.example  .gitignore  Makefile  PROGRESS.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: 01-docker-setup.md  02-database-setup.md  03-redis-queues.md  04-database-models-study-guide.md  05-database-models-visual-guide.md
docs/superpowers/plans/: 2026-05-09-multi-tenant-ai-platform-phase1.md
docs/superpowers/specs/: 2026-05-09-multi-tenant-ai-platform-design.md
monitoring/: prometheus.yml
scripts/: init_db.sql  manage_db.py  tutorial_models.py
src/queue_manager/: __init__.py  queue.py
src/shared/: __init__.py  config.py  database.py  models.py  types.py
tests/unit/: test_config.py  test_queue_manager.py
